# OpenPlatform-with-Steam

./: .gitignore  CMakeLists.txt  COPYING.txt  INSTALLING.txt  OpenAchievement.cpp  OpenAchievement.h  OpenApplication.cpp  OpenApplication.h  OpenDLC.cpp  OpenDLC.h  OpenInput.cpp  OpenMultiplayer.cpp  OpenPlatform.cpp  OpenPlatform.h  README.md  README_DEV.txt
resource/: OpenPlatform.aps  OpenPlatform.rc
